--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.1"
   },
