--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.35.5",
+    "antd": "^5.17.2",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
