--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.17.2",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
+    "framer-motion": "^11.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.2",
+    "react-to-pdf": "^1.0.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
