--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.2",
     "react-to-pdf": "^1.0.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.11.0",
     "swiper": "^11.1.1"
